# bff

./: .coveragerc  .gitattributes  .gitignore  .pylintrc  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  fancy.py  requirements_dev.txt  setup.cfg  setup.py  test_fancy.py
bff/: README.md  __init__.py  _version.py  config.py  config.yml  fancy.py  setup.py
bff/bff/: __init__.py  fancy.py
bff/plot/: __init__.py  plot.py
bff/tests/: test_fancy.py
doc/: README.md
doc/source/: conf.py  config.rst  example_plots.rst  fancy.rst  index.rst  quickstart.rst
notebooks/: notebook-bff-plot.ipynb  notebook-bff-plot.rst
scripts/: run_jupyter.sh
tests/: test_config.py  test_fancy.py  test_plot.py
