[versioneer]
VCS = git
style = pep440
versionfile_source = bff/_version.py
versionfile_build = bff/_version.py
tag_prefix = v
parentdir_prefix = bff-

[metadata]
description-file = README.md

[flake8]
max-line-length = 100
ignore = F841,   # Local variable name is assigned to but never used.
         W503    # Line break occurred before a binary operator.
exclude =
    .git,
    .eggs,
    __pycache__,
    build/,
    dist/,
    doc/,
    venv*/,
    versioneer.py,
    bff/_version.py,

[mypy]
ignore_missing_imports=True
no_implicit_optional=True

[mypy-bff._version]
ignore_errors=True

[pycodestyle]
max_line_length = 100

[pydocstyle]
convention = numpy
add_ignore = D401   # First line should be in imperative mood.

[tool:pytest]
testpaths = tests
markers = mpl_image_compare: mark a test for image comparison.
